# txt2csv

./: .gitignore  README.md  pyproject.toml
script/: build-version.py  build.cmd
txt2csv/: __main__.py  main.py  parse_args.py
