[tool.poetry]
name = "txt2csv"
version = "0.1.1"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pefile = "^2023.2.7"
importlib-metadata = { version = "^1.0.0", python = "<3.8" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
