[tool.poetry]
name = "txt2csv"
version = "0.2.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pefile = "^2023.2.7"
importlib-metadata = { version = "^1.0.0", python = "<3.8" }
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pyinstaller-versionfile = "^2.1.1"
pyinstaller = {version = "^5.13.2", python = ">=3.11,<3.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
